@@ -4,8 +4,6 @@ plugins {
     id("org.springframework.boot") version "3.2.5"
     id("io.spring.dependency-management") version "1.1.4"
     application
-//    id("com.github.johnrengelman.shadow") version "8.1.1" // ADICIONAR
-
 }
 
 group = "br.com.scraper"
@@ -16,8 +14,6 @@ repositories {
 }
 
 dependencies {
-    testImplementation(kotlin("test"))
-
     implementation(kotlin("stdlib"))
 
     // Selenium
@@ -30,40 +26,42 @@ dependencies {
     implementation("org.slf4j:slf4j-api:2.0.12")
     implementation("ch.qos.logback:logback-classic:1.4.14")
 
-    // JSON
+    // JSON e YAML
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.17.0")
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.0")
+    implementation("org.yaml:snakeyaml:2.2")
 
-    // Jsoup (BeautifulSoup do Java/Kotlin)
+    // Spring
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-configuration-processor")
+    kapt("org.springframework.boot:spring-boot-configuration-processor")
+
+    // Jsoup
     implementation("org.jsoup:jsoup:1.17.2")
 
     // Testes
     testImplementation(kotlin("test"))
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
-    testImplementation("org.junit.jupiter:junit-jupiter:5.9.3")
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude(group = "org.junit.vintage", module = "junit-vintage-engine")
     }
 
-    // Spring Boot Web
-    implementation("org.springframework.boot:spring-boot-starter-web")
+    testImplementation("org.mockito:mockito-inline:5.2.0")
+    testImplementation("org.mockito:mockito-core:5.2.0")
+    testImplementation("org.mockito.kotlin:mockito-kotlin:4.1.0") // compatível
 
-    implementation("org.yaml:snakeyaml:2.2")
-    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.17.0")
-    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.0")
-
-    implementation("org.springframework.boot:spring-boot-configuration-processor")
-    kapt("org.springframework.boot:spring-boot-configuration-processor")
-
-    testImplementation("org.mockito:mockito-core:5.7.0")
-//    testImplementation("org.mockito:mockito-inline:5.7.0")
 }
 
 application {
     mainClass.set("br.com.scraper.ScraperApiApplicationKt")
 }
 
-
-
+tasks.withType<Test> {
+    useJUnitPlatform()
+    systemProperty("spring.profiles.active", "test")
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    jvmArgs = (jvmArgs ?: mutableListOf()) + "-XX:+EnableDynamicAgentLoading"
+}
 
 tasks.withType<Jar> {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
@@ -75,10 +73,4 @@ tasks.named<org.springframework.boot.gradle.tasks.bundling.BootJar>("bootJar") {
 
 tasks.named<Jar>("jar") {
     enabled = false
-}
-tasks.test {
-    useJUnitPlatform()
-    systemProperty("spring.profiles.active", "test")
-    jvmArgs("-Djdk.instrument.traceUsage")
-//    jvmArgs = (jvmArgs ?: mutableListOf()) + "-XX:+EnableDynamicAgentLoading"
 }
